--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </button>
       </div>
       <div class="home-img">
-        <img src="./img/perfil.jpg" alt="Foto de perfil">
+        <img src="./perfil.jpg" alt="Foto de perfil">
       </div>
     </section>
 
